# db-sync-monitoring

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt
preprod/: dbsync_preprod_stats_sqlite.db
preview/: dbsync_preview_stats_sqlite.db
scripts/: create-db-sync-stats.py  db-sync-process-monitor.py  regenerate-plots.py  simple-db-sync-monitor.py
